--- a/scss/abstract/_spacing.scss
+++ b/scss/abstract/_spacing.scss
@@ -12,6 +12,7 @@ $spacing: (
     800: 4rem,    // 64px
     900: 4.5rem,  // 72px
     1000: 5rem,   // 80px
+    1050: 5.438rem,   // 80px
     1400: 7rem,   // 113px
     1450: 7.5rem,  // 120px
     1495: 7.969rem  // 127.5px
