--- a/scss/component/_footer.scss
+++ b/scss/component/_footer.scss
@@ -6,7 +6,7 @@
 .footer {
 
     &__bg {
-        min-height: 374px;
+        min-height: 45.224vh;
         position: relative;
         background-color: map.get(c.$cyan, 600);
         background-image: url("../assets/mobile/footer.jpg");
@@ -16,12 +16,12 @@
 
         @media screen and (min-width: map.get(v.$breakpoint, tablet)) {
             background-image: url("../assets/tablet/footer.jpg");
-            min-height: 320px;
+            min-height: 38.8vh;
         }
 
         @media screen and (min-width: map.get(v.$breakpoint, l_desktop)) {
             background-image: url("../assets/desktop/footer.jpg");
-            min-height: 312px;
+            min-height: 31.2vh;
         }
 
         &::after {
@@ -72,5 +72,4 @@
             max-inline-size: 16rem;
         }
     }
-
 }
