--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-size: clamp(2.5rem, 1.98rem + 2.24vw, 4rem);
   font-weight: 900;
-  line-height: 110%;
+  line-height: 1.1;
   letter-spacing: 0;
   color: #28283D;
 }
@@ -11,7 +11,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-size: clamp(2rem, 1.83rem + 0.75vw, 2.5rem);
   font-weight: 900;
-  line-height: 110%;
+  line-height: 1.1;
   letter-spacing: 0;
 }
 
@@ -19,7 +19,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-size: clamp(0.75rem, 0.66rem + 0.37vw, 1rem);
   font-weight: 900;
-  line-height: 110%;
+  line-height: 1.1;
   letter-spacing: 0.25rem;
 }
 
@@ -27,7 +27,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-size: clamp(1rem, 0.96rem + 0.19vw, 1.13rem);
   font-weight: 500;
-  line-height: 140%;
+  line-height: 1.4;
   letter-spacing: 0;
 }
 
@@ -35,7 +35,7 @@
   font-family: "Red Hat Display", sans-serif;
   font-size: 1rem;
   font-weight: 900;
-  line-height: 150%;
+  line-height: 1.5;
   letter-spacing: 0;
 }
 
@@ -156,6 +156,7 @@ body {
   .section_img--hero_l_desktop,
   .section_img--hero_r_desktop {
     display: inline-block;
+    margin-block-end: 0;
   }
 }
 
@@ -207,6 +208,11 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 1.5rem;
+}
+@media screen and (min-width: 90rem) {
+  .hero__text {
+    gap: 2rem;
+  }
 }
 .hero__cta_group {
   display: flex;
