--- a/scss/abstract/_spacing.scss
+++ b/scss/abstract/_spacing.scss
@@ -16,5 +16,6 @@ $spacing: (
     1050: 5.438rem,   // 80px
     1400: 7rem,   // 113px
     1450: 7.5rem,  // 120px
-    1495: 7.969rem  // 127.5px
+    1495: 7.969rem,  // 127.5px
+    1550: 8.938rem  //143px
 );
