--- a/scss/component/_section_showcase.scss
+++ b/scss/component/_section_showcase.scss
@@ -17,6 +17,7 @@
 
     @media screen and (min-width: map.get(v.$breakpoint, l_desktop)) {
         grid-template-columns: repeat(auto-fit, 16rem);
+        height: 256px;
         @include m.spacing(gap, 400);
     }
 
@@ -48,6 +49,9 @@
 
 .showcase {
     @include m.spacing(margin-block-end, 800);
+    @media screen and (min-width: map.get(v.$breakpoint, l_desktop)) {
+        @include m.spacing(margin-block-end, 900);
+    }
 
     &__intro {
         text-transform: uppercase;
