--- a/scss/base/reset.scss
+++ b/scss/base/reset.scss
@@ -14,6 +14,10 @@
     display: inline-block;
     max-inline-size: 100%;
   }
+
+  ul {
+    list-style: none;
+  }
   
   input, button, textarea, select, a {
     font: inherit;
