--- a/scss/component/_toast.scss
+++ b/scss/component/_toast.scss
@@ -14,9 +14,9 @@
 
     @media screen and (min-width: 48rem) {
         background-color: map.get(c.$grey, 900);
-        padding: 18px 31px 17px 32px;
-        border-radius: 10px;
-        width: 100%;
+        padding: 1.125em 1.938em 1.063em 2em;
+        border-radius: .625em;
+        inline-size: 100%;
         max-inline-size: 15.5rem;
         left: 52%;
         bottom: 133%;
@@ -47,6 +47,14 @@
 
         path {
             transition: fill .3s ease;
+
+            @media (prefers-reduced-motion: no-preference) {
+            transition: fill .3s ease;
+            }
+
+            @media (prefers-reduced-motion: reduce) {
+            transition: none;
+            }
         }
 
         @media (pointer: coarse) {
@@ -73,11 +81,11 @@
         left: 50%;
         transform: translate(-50%, -50%);
 
-        width: 0px;
-        height: 0px;
-        border-top: 12px solid map.get(c.$grey, 900);
-        border-right: 12px solid transparent;
-        border-left: 12px solid transparent;
+        inline-size: 0;
+        block-size: 0;
+        border-top: .75em solid map.get(c.$grey, 900);
+        border-right: .75em solid transparent;
+        border-left: .75em solid transparent;
 
         @media screen and (min-width: 48rem) {
             opacity: 1;
