--- a/css/reset.css
+++ b/css/reset.css
@@ -7,6 +7,7 @@
 a {
   font-size: 100%;
   vertical-align: baseline;
+  text-decoration: none;
 }
 
 img, picture, video, canvas, svg {
@@ -16,6 +17,7 @@ img, picture, video, canvas, svg {
 
 ul {
   list-style: none;
+  line-height: 0;
 }
 
 input, button, textarea, select, a {
