--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -22,3 +22,12 @@
         }
     }
 }
+
+@mixin transition($prop...) {
+    @media (prefers-reduced-motion: no-preference) {
+        transition: $prop;
+    }
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
+    }
+}
