--- a/scss/base/reset.scss
+++ b/scss/base/reset.scss
@@ -8,6 +8,7 @@
  a {
     font-size: 100%;
     vertical-align: baseline;
+    text-decoration: none;
   }
   
   img, picture, video, canvas, svg {
@@ -17,6 +18,7 @@
 
   ul {
     list-style: none;
+    line-height: 0;
   }
   
   input, button, textarea, select, a {
