--- a/scss/component/_card.scss
+++ b/scss/component/_card.scss
@@ -15,7 +15,7 @@
     @media screen and (min-width: 48rem) {
         max-inline-size: 38rem;
         flex-direction: row;
-        /*necessary to let toast overflow card at tablet/desktop size*/
+        /*TODO: needs refactoring; let toast overflow card at tablet/desktop size*/
         overflow: visible;
     }
 
