--- a/scss/abstract/_utils.scss
+++ b/scss/abstract/_utils.scss
@@ -1,30 +1,29 @@
-@use "./color" as c;
-@use "./typography" as t;
+@use "./variables" as v;
 @use "./mixins" as m;
 @use "sass:map";
 
-.text_preset_1 { 
-    @include m.text_preset(t.$font_family, map.get(t.$fs, 40), map.get(t.$fw, "bold"), 1, 0, map.get(c.$blue, 800));
-    @media screen and (min-width: 48rem) { font-size: map.get(t.$fs, 56); }
-}
-.text_preset_2 { @include m.text_preset(t.$font_family, map.get(t.$fs, 16), map.get(t.$fw, "regular"), 1.5, 0, map.get(c.$blue, 800)); }
-.text_preset_3 { @include m.text_preset(t.$font_family, map.get(t.$fs, 12), map.get(t.$fw, "bold"), 1.5, 0, map.get(c.$blue, 800)); }
-
-.text_preset_2--bold {
-    @extend .text_preset_2;
-    font-weight: map.get(t.$fw, "bold");
+.text_preset_3 {
+    @include m.text_preset(v.$font_family, map.get(v.$fs, 32), map.get(v.$fw, "light"), 1.1875, 0, v.$white);
 }
 
-.is_hidden {
-    display: none !important;
+.text_preset_4 {
+    @include m.text_preset(v.$font_family, map.get(v.$fs, 24), map.get(v.$fw, "light"), 1.16, 0, v.$white);
 }
 
-.is_valid {
-    background: map.get(c.$gradient, linear_gradient) !important;
+.text_preset_5--medium {
+    @include m.text_preset(v.$font_family, map.get(v.$fs, 18), map.get(v.$fw, "medium"), 1.16, 0, v.$white);
 }
 
-.is_invalid {
-    background-color: map.get(c.$red, 100) !important;
-    outline-color: map.get(c.$red, 200) !important;
-    color: map.get(c.$red, 200) !important;
+.text_preset_5--regular {
+    @include m.text_preset(v.$font_family, map.get(v.$fs, 18), map.get(v.$fw, "regular"), 1.16, 0, v.$purple--500);
 }
+
+.text_preset_6 {
+    @include m.text_preset(v.$font_family, map.get(v.$fs, 15), map.get(v.$fw, "regular"), 1.2, 0, v.$navy--200);
+}
+
+//disables :focus-visible ring on initial page load
+.focus_visible {
+    outline: none !important;
+    box-shadow: none !important;
+  }
