--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,50 +1,252 @@
-@use "../abstract/color" as c;
-@use "../abstract/spacing" as s;
-@use "sass:map";
+@use "../abstract/mixins" as m;
+@use "../abstract/variables" as v;
 
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: v.$black--bg;
 }
 
 .page_wrapper {
-  background-color: map.get(c.$blue, 800);
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-}
-
-%page {
     display: flex;
-    flex-direction: column;
-    justify-self: center;
-    align-self: center;
-    max-inline-size: 23.438rem;
-    overflow: hidden;
-    background-color: c.$white;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    height: 100svh;
 }
 
-.container--newsletter {
-  max-inline-size: 20.438rem;
-  margin: map.get(s.$spacing, 500) auto 2.75rem;
+.report_summary {
+    background-color: v.$navy--900;
+    border-radius: inherit;
 
-  @media screen and (min-width: 48rem) {
-      max-inline-size: 33rem;
-      margin-block-start: map.get(s.$spacing, 500);
-      margin-block-end: map.get(s.$spacing, 0);
-  }
+    &__avatar_info {
+        background-color: v.$purple--600;
+        border-radius: inherit;
+        display: flex;
+        align-items: center;
+        @include m.spacing(gap, 300);
+        padding: map-get(v.$spacing, 400) map-get(v.$spacing, 400) 2.313rem 2.25rem;
 
-  @media screen and (min-width: 90rem) {
-    margin: 4.469rem map.get(s.$spacing, 800) 4.469rem 0;
-    max-inline-size: 23.5rem;
-  }
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            padding: 2.156rem 20.18rem 2.156rem map-get(v.$spacing, 400); //magic number to follow design
+        }
+
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            flex-direction: column;
+            align-items: start;
+            @include m.spacing(gap, 500);
+            padding: 2rem 2.5rem 5.75rem map-get(v.$spacing, 400);
+        }
+    }
+
+    &__avatar_details {
+        display: flex;
+        flex-direction: column;
+        @include m.spacing(gap, 100);
+    }
+
+    .avatar_name {
+
+        //updates font-size and line-height
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            font-size: map-get(v.$fs, 40);
+            line-height: 1.17;
+        }
+    }
+
+    &__avatar_img {
+        inline-size: 4rem;
+        block-size: 4rem;
+        border-radius: map-get(v.$border_radius, circle);
+        border: .188rem solid v.$white;
+        box-shadow: 0 4px 4px hsl(0 0% 0% / 0.25);
+
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            inline-size: 4.875rem;
+            block-size: 4.875rem;
+            @include m.spacing(gap, 500);
+        }
+    }
+
+    &__time_range {
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        @include m.spacing(gap, 600);
+        @include m.spacing(padding-block-start, 300);
+        padding-block-end: 1.563rem; //magic number to follow design
+
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            gap: 4rem;
+        }
+
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            flex-direction: column;
+            gap: 1.313rem;
+            padding-block-start: 1.75rem; //magic number to follow design
+            padding-block-end: 1.75rem; //magic number to follow design
+            @include m.spacing(padding-inline-start, 400);
+        }
+
+        &>*:hover,
+        &>*:focus-visible,
+        &>*:focus {
+            @include m.transition(color .3s ease);
+            color: v.$white;
+        }
+    }
 }
 
-.container--success {
-  max-inline-size: 20.438rem;
-  margin: 9.313rem map.get(s.$spacing, 300) 4.375rem;
-  @media screen and (min-width: 48rem) {
-      max-inline-size: 23.5rem;
-      margin: 3.75rem map.get(s.$spacing, 800);
-  }
+.item {
+    border-radius: inherit;
+    padding-block-start: 2.375rem; //magic number to follow design
+    
+
+    &:hover &__container { 
+        background-color: v.$navy--800;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        padding-block-start: 2.063rem; //magic number to follow design
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        padding-block-start: 2.813rem; //magic number to follow design
+    }
+
+    &__container {
+        background-color: v.$navy--900;
+        border-radius: inherit;
+        padding: 1.719rem map-get(v.$spacing, 300);
+        //to stop pixel bleeding over the navy-colored padding
+        box-shadow: 0 0 0 .1px v.$navy--900;
+        @include m.transition(background-color .3s ease);
+
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            padding: 1.594rem 1.344rem;
+        }
+
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            padding: 2rem 2.031rem;
+        }
+    }
+
+    &__header {
+        margin-block-end: .469rem; //magic number to follow design
+
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            @include m.spacing(margin-block-end, 200);
+        }
+
+        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+            @include m.spacing(margin-block-end, 300);
+        }
+    }
+
+    &__header,
+    &__body {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap; //to accomodate for extremely long numbers
+    }
+
+    &__body {
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            flex-direction: column;
+            @include m.spacing(gap, 100);
+            align-items: start;
+        }
+    }
+
+    .current_hours {
+
+        //updates font-size and line-height
+        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+            font-size: map-get(v.$fs, 56);
+            line-height: 1.178;
+        }
+    }
+}
+
+
+.work {
+    background: v.$orange url("../../assets/icon_work.svg") no-repeat 93.5% -14%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 58px 58px; //magic number to follow design
+        background-position: 93.5% -4%;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 78px 78px; //magic number to follow design
+    }
+}
+
+.play {
+    background: v.$blue url("../../assets/icon_play.svg") no-repeat 93.5% -14%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 58px 58px; //magic number to follow design
+        background-position: 90% -2%;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 90px 90px; //magic number to follow design
+        background-position: 90% -5%;
+    }
+}
+
+.study {
+    background: v.$pink url("../../assets/icon_study.svg") no-repeat 93.5% -8%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 58px 58px; //magic number to follow design
+        background-position: 90% -2%;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 78px 78px; //magic number to follow design
+        background-position: 90% -2%;
+    }
+}
+
+.exercise {
+    background: v.$green url("../../assets/icon_exercise.svg") no-repeat 93.5% -1%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 58px 40px; //magic number to follow design
+        background-position: 90% 0;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 80px 54px; //magic number to follow design
+        background-position: 90% 0;
+    }
+}
+
+.social {
+    background: v.$purple--700 url("../../assets/icon_social.svg") no-repeat 93.5% -25%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 54px 73px; //magic number to follow design
+        background-position: 95% -7%;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 74px 100px; //magic number to follow design
+        background-position: 90% -10%;
+    }
+}
+
+.self_care {
+    background: v.$yellow url("../../assets/icon_self_care.svg") no-repeat 93.5% -12%;
+
+    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        background-size: 54px 48px; //magic number to follow design
+        background-position: 89% -5%;
+    }
+
+    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        background-size: 72px 66px; //magic number to follow design
+        background-position: 90% -5%;
+    }
 }
