--- a/scss/base/reset.scss
+++ b/scss/base/reset.scss
@@ -1,4 +1,3 @@
-
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -25,4 +24,5 @@
     font: inherit;
     border: none;
     background-color: transparent;
+    cursor: pointer;
   }
