--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,7 @@
-@use "abstract/color";
 @use "abstract/mixins";
-@use "abstract/spacing";
-@use "abstract/typography";
 @use "abstract/utils";
+@use "abstract/variables";
+
 @use "base/base";
-@use "component/button";
-@use "component/form";
-@use "component/newsletter";
-@use "component/success_page";
+
+@use "layout/grid";
