--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,5 +1,6 @@
 @use "../abstract/mixins" as m;
 @use "../abstract/variables" as v;
+@use "sass:map";
 
 .grid {
     display: grid;
@@ -7,7 +8,7 @@
     @include m.spacing(gap, 300);
     border-radius: .938rem;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         grid-template-columns: repeat(3, minmax(clamp(11.25rem, 24.2vw, 31.25rem), 1fr));
 
         &> :first-child {
@@ -15,7 +16,7 @@
         }
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         grid-template-columns: repeat(4, clamp(12.5rem, 17.72vw, 50rem));
         @include m.spacing(gap, 400);
 
