--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,20 +1,20 @@
 //COLORS
-$black: hsl(0°, 0%, 0%);
-$black--bg: hsl(0, 0%, 12%);
-$blue: hsl(195°, 74%, 62%);
-$green: hsl(145°, 58%, 55%);
-$grey: hsl(0°, 0%, 85%);
-$navy--200: hsl(236°, 100%, 87%);
-$navy--800: hsl(235°, 41%, 34%);
-$navy--900: hsl(235°, 46%, 20%);
-$navy--950: hsl(226°, 43%, 10%);
-$orange: hsl(15°, 100%, 70%);
-$pink: hsl(348°, 100%, 68%);
-$purple--500: hsl(235°, 45%, 61%);
-$purple--600: hsl(246°, 80%, 60%);
-$purple--700: hsl(264°, 64%, 52%);
-$white: hsl(0°, 100%, 100%);
-$yellow: hsl(43°, 84%, 65%);
+$black: hsl(0deg, 0%, 0%);
+$black--bg: hsl(0deg, 0%, 12%);
+$blue: hsl(195deg, 74%, 62%);
+$green: hsl(145deg, 58%, 55%);
+$grey: hsl(0deg, 0%, 85%);
+$navy--200: hsl(236deg, 100%, 87%);
+$navy--800: hsl(235deg, 41%, 34%);
+$navy--900: hsl(235deg, 46%, 20%);
+$navy--950: hsl(226deg, 43%, 10%);
+$orange: hsl(15deg, 100%, 70%);
+$pink: hsl(348deg, 100%, 68%);
+$purple--500: hsl(235deg, 45%, 61%);
+$purple--600: hsl(246deg, 80%, 60%);
+$purple--700: hsl(264deg, 64%, 52%);
+$white: hsl(0deg, 100%, 100%);
+$yellow: hsl(43deg, 84%, 65%);
 
 //TYPOGRAPHY
 $font_family: "Rubik", sans-serif;
