--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,8 +1,9 @@
 @use "../abstract/mixins" as m;
 @use "../abstract/variables" as v;
+@use "sass:map";
 
 body {
-    background-color: v.$black--bg;
+    background-color: v.$navy--950;
 }
 
 .page_wrapper {
@@ -23,17 +24,17 @@ body {
         display: flex;
         align-items: center;
         @include m.spacing(gap, 300);
-        padding: map-get(v.$spacing, 400) map-get(v.$spacing, 400) 2.313rem 2.25rem;
+        padding: map.get(v.$spacing, 400) map.get(v.$spacing, 400) 2.313rem 2.25rem;
 
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
-            padding: 2.156rem 20.18rem 2.156rem map-get(v.$spacing, 400); //magic number to follow design
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
+            padding: 2.156rem 20.18rem 2.156rem map.get(v.$spacing, 400); //magic number to follow design
         }
 
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
             flex-direction: column;
             align-items: start;
             @include m.spacing(gap, 500);
-            padding: 2rem 2.5rem 5.75rem map-get(v.$spacing, 400);
+            padding: 2rem 2.5rem 5.75rem map.get(v.$spacing, 400);
         }
     }
 
@@ -46,8 +47,8 @@ body {
     .avatar_name {
 
         //updates font-size and line-height
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
-            font-size: map-get(v.$fs, 40);
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
+            font-size: map.get(v.$fs, 40);
             line-height: 1.17;
         }
     }
@@ -55,11 +56,11 @@ body {
     &__avatar_img {
         inline-size: 4rem;
         block-size: 4rem;
-        border-radius: map-get(v.$border_radius, circle);
+        border-radius: map.get(v.$border_radius, circle);
         border: .188rem solid v.$white;
         box-shadow: 0 4px 4px hsl(0 0% 0% / 0.25);
 
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
             inline-size: 4.875rem;
             block-size: 4.875rem;
             @include m.spacing(gap, 500);
@@ -74,23 +75,23 @@ body {
         @include m.spacing(padding-block-start, 300);
         padding-block-end: 1.563rem; //magic number to follow design
 
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        &>*:hover,
+        &>*:focus-visible,
+        &>*:focus {
+            color: v.$white;
+            @include m.transition(color .3s ease);
+        }
+
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
             gap: 4rem;
         }
 
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
             flex-direction: column;
             gap: 1.313rem;
             padding-block-start: 1.75rem; //magic number to follow design
             padding-block-end: 1.75rem; //magic number to follow design
             @include m.spacing(padding-inline-start, 400);
-        }
-
-        &>*:hover,
-        &>*:focus-visible,
-        &>*:focus {
-            @include m.transition(color .3s ease);
-            color: v.$white;
         }
     }
 }
@@ -98,33 +99,32 @@ body {
 .item {
     border-radius: inherit;
     padding-block-start: 2.375rem; //magic number to follow design
-    
 
-    &:hover &__container { 
+    &:hover &__container {
         background-color: v.$navy--800;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         padding-block-start: 2.063rem; //magic number to follow design
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         padding-block-start: 2.813rem; //magic number to follow design
     }
 
     &__container {
         background-color: v.$navy--900;
         border-radius: inherit;
-        padding: 1.719rem map-get(v.$spacing, 300);
+        padding: 1.719rem map.get(v.$spacing, 300);
         //to stop pixel bleeding over the navy-colored padding
         box-shadow: 0 0 0 .1px v.$navy--900;
         @include m.transition(background-color .3s ease);
 
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
             padding: 1.594rem 1.344rem;
         }
 
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
             padding: 2rem 2.031rem;
         }
     }
@@ -132,11 +132,11 @@ body {
     &__header {
         margin-block-end: .469rem; //magic number to follow design
 
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
             @include m.spacing(margin-block-end, 200);
         }
 
-        @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
             @include m.spacing(margin-block-end, 300);
         }
     }
@@ -150,7 +150,7 @@ body {
     }
 
     &__body {
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
             flex-direction: column;
             @include m.spacing(gap, 100);
             align-items: start;
@@ -160,8 +160,8 @@ body {
     .current_hours {
 
         //updates font-size and line-height
-        @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
-            font-size: map-get(v.$fs, 56);
+        @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
+            font-size: map.get(v.$fs, 56);
             line-height: 1.178;
         }
     }
@@ -169,83 +169,83 @@ body {
 
 
 .work {
-    background: v.$orange url("../../assets/icon_work.svg") no-repeat 93.5% -14%;
+    background: v.$orange url("../assets/icon_work.svg") no-repeat 93.5% -14%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 58px 58px; //magic number to follow design
         background-position: 93.5% -4%;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 78px 78px; //magic number to follow design
     }
 }
 
 .play {
-    background: v.$blue url("../../assets/icon_play.svg") no-repeat 93.5% -14%;
+    background: v.$blue url("../assets/icon_play.svg") no-repeat 93.5% -14%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 58px 58px; //magic number to follow design
         background-position: 90% -2%;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 90px 90px; //magic number to follow design
         background-position: 90% -5%;
     }
 }
 
 .study {
-    background: v.$pink url("../../assets/icon_study.svg") no-repeat 93.5% -8%;
+    background: v.$pink url("../assets/icon_study.svg") no-repeat 93.5% -8%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 58px 58px; //magic number to follow design
         background-position: 90% -2%;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 78px 78px; //magic number to follow design
         background-position: 90% -2%;
     }
 }
 
 .exercise {
-    background: v.$green url("../../assets/icon_exercise.svg") no-repeat 93.5% -1%;
+    background: v.$green url("../assets/icon_exercise.svg") no-repeat 93.5% -1%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 58px 40px; //magic number to follow design
         background-position: 90% 0;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 80px 54px; //magic number to follow design
         background-position: 90% 0;
     }
 }
 
 .social {
-    background: v.$purple--700 url("../../assets/icon_social.svg") no-repeat 93.5% -25%;
+    background: v.$purple--700 url("../assets/icon_social.svg") no-repeat 93.5% -25%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 54px 73px; //magic number to follow design
         background-position: 95% -7%;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 74px 100px; //magic number to follow design
         background-position: 90% -10%;
     }
 }
 
 .self_care {
-    background: v.$yellow url("../../assets/icon_self_care.svg") no-repeat 93.5% -12%;
+    background: v.$yellow url("../assets/icon_self_care.svg") no-repeat 93.5% -12%;
 
-    @media screen and (min-width: map-get(v.$breakpoint, m_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, m_screen)) {
         background-size: 54px 48px; //magic number to follow design
         background-position: 89% -5%;
     }
 
-    @media screen and (min-width: map-get(v.$breakpoint, l_screen)) {
+    @media screen and (min-width: map.get(v.$breakpoint, l_screen)) {
         background-size: 72px 66px; //magic number to follow design
         background-position: 90% -5%;
     }
